cabal-version:      2.4
name:               mkock-redo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Martin Kock
maintainer:         kock.martin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    README.markdown
    README.txt

executable mkock-redo
    main-is:          redo.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                     ,bytestring >= 0.10.12.0
                     ,containers >= 0.6.5.1
                     ,directory >= 1.3.6.0
                     ,filepath >= 1.4.2.1
                     ,process >= 1.6.13.2
                     ,pureMD5 >= 2.1.4
    hs-source-dirs:   .
    default-language: Haskell2010
